# oscilloom

./: .gitignore  CONTRIBUTING.md  LICENSE.md  NOTICE  README.md  oscilloom.spec  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_node.md
.github/workflows/: build-installer.yml  ci.yml
backend/: batch_processor.py  compound_registry.py  custom_node_store.py  engine.py  execution_cache.py  history_store.py  main.py  models.py  path_security.py  pipeline_templates.py  preview.py  rate_limit.py  script_exporter.py  session_store.py  validation.py  workflow_store.py
backend/api/: batch_routes.py  compound_routes.py  custom_node_routes.py  export_routes.py  history_routes.py  inspect_routes.py  pipeline_routes.py  registry_routes.py  report_routes.py  session_routes.py  workflow_routes.py
backend/registry/: __init__.py  node_descriptor.py
backend/templates/: pipeline_export.py.j2
backend/tests/: conftest.py  test_batch.py  test_bids.py  test_cache.py  test_channel_utils.py  test_clinical.py  test_compound.py  test_connectivity.py  test_custom_node.py  test_custom_store.py  test_engine.py  test_export.py  test_hardening.py  test_methods.py  test_multimodal.py  (+10 more)
frontend/: README.md  index.html  package-lock.json  package.json
sample_pipelines/: comprehensive_report.json
scripts/: build-installer.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
validation/: compare_results.py  generate_logos.py  manual_mne_pipeline.py  oscilloom_pipeline.py  real_validation.py
(+72 files in other folders)
