[package]
name = "oscilloom"
version = "1.0.0"
description = "Oscilloom — Local-first EEG Pipeline Builder"
authors = ["BubbleGum234"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
